--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,12 +44,18 @@
           <li><a href="/movies">Movies</a></li>
           <li><a href="/characters">Characters</a></li>
           <li><a href="/actors">Actors</a></li>
+          <li><a href="/bookmarks">Bookmarks</a></li>
           <li><a href="/rails/info">Sitemap</a></li>
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/users/edit">Dummy Edit Profile Link</a></li>
-          <li><a href="/users/sign_out" data-method="delete" rel="nofollow">Dummy Sign Out Link</a></li>
+          <% if current_user.present? %>
+            <li><a href="/users/edit">Edit Profile</a></li>
+            <li><a href="/users/sign_out" data-method="delete" rel="nofollow">Sign Out</a></li>
+          <% else %>
+            <li><a href="/users/sign_up">Sign up</a></li>
+            <li><a href="/users/sign_in">Sign in</a></li>
+          <% end %>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div>
