--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -9,21 +9,23 @@
   <div class="col-md-12">
     <table class="table table-striped table-hover">
       <tr>
-        <th>User</th>
         <th>Movie</th>
         <th>Actions</th>
       </tr>
 
       <% @bookmarks.each do |bookmark| %>
+        <!-- <% if bookmark.user_id == current_user.id %> -->
       <tr>
-        <td><%= bookmark.user_id %></td>
-        <td><%= bookmark.movie_id %></td>
+        <!-- <td><%= bookmark.user_id %></td> -->
+        <td><%= bookmark.movie.title %></td>
+        <!-- <td><%= Movie.find_by(:id=>bookmark.movie_id).try(:title) %></td> -->
         <td>
           <a href="/bookmarks/<%= bookmark.id %>" class="btn btn-primary">Show</a>
           <a href="/bookmarks/<%= bookmark.id %>/edit" class="btn btn-warning">Edit</a>
           <a href="/delete_bookmark/<%= bookmark.id %>" class="btn btn-danger" rel="nofollow">Delete</a>
         </td>
       </tr>
+        <!-- <% end %> -->
       <% end %>
     </table>
   </div>
