--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
 
         <ul class="nav navbar-nav navbar-right">
           <% if current_user.present? %>
-            <li><a href="/users/edit">Edit Profile</a></li>
+            <li><a href="/users/edit"><%=current_user.username%></a></li>
             <li><a href="/users/sign_out" data-method="delete" rel="nofollow">Sign Out</a></li>
           <% else %>
             <li><a href="/users/sign_up">Sign up</a></li>
